tests/snapshots/test_runner__tests__compiler__transpile__entry_point_1__bar.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
// This is for testing:
// Entry points should only be transpiled at entry points
entry
  "Hello" print

============
EXIT CODE
============
0

============
STDOUT
============
Hello

============
STDERR
============
