tests/snapshots/test_runner__tests__compiler__transpile__entry_point_1__foo.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
entry
  "World" .print

============
EXIT CODE
============
0

============
STDOUT
============
World

============
STDERR
============
